// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonLink no user account 1`] = `
<DocumentFragment>
  <span
    class="a"
    data-state="closed"
  >
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
    >
      User:
    </span>
    alice
  </span>
</DocumentFragment>
`;

exports[`PersonLink with user account 1`] = `
<DocumentFragment>
  <a
    class="a b"
    data-state="closed"
    href="u"
  >
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
    >
      User:
    </span>
    alice
  </a>
</DocumentFragment>
`;
